# Kumi

./: .gitignore  AGENTS.md  README.md  improvements.md  main.py  pyproject.toml  vim
api/: knowledge_management.py  web.py
config/: logging_config.py
input/notebook_lm/: RADComplete_July2008.md
llm/: factory.py  openai_client.py
merged/: notebook_lm.csv  notebook_small.csv
scripts/md2qa/: ENHANCED_PIPELINE.md  enhanced_pipeline.py  enhanced_step1.py  enhanced_step2.py  enhanced_step3.py  metrics.py  prompts.py  step2_chunk2qa.py  test_tsv.py
scripts/md2qa/config/: config_manager.py  default_config.yaml  example_config.yaml
scripts/md2qa/state/: state_manager.py
services/: embedding_service.py  knowledge_service.py  similarity_service.py
vector_db/: base.py  chroma_client.py  embedding_client.py  factory.py  milvus_client.py
web/static/css/: bootstrap-icons.css
web/static/css/knowledge/: edit.css
web/static/js/knowledge/: test.js
web/templates/pages/knowledge/: dashboard.html  edit.html  test.html  upload.html
